--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -30,5 +30,11 @@
   <%= @ticket.phone %>
 </p>
 
+<p>
+  <strong>Event_ID:</strong>
+  <%= @ticket.event_id %>
+</p>
+
 <%= link_to 'Edit', edit_ticket_path(@ticket) %> |
 <%= link_to 'Back', tickets_path %>
+
