--- a/app/views/events/_new_ticket.html.erb
+++ b/app/views/events/_new_ticket.html.erb
@@ -42,8 +42,11 @@
   </div>
 
   <div class="field">
-    
     <%= form.hidden_field :event_id %>
+  </div>
+  
+  <div class="field">
+    <%= form.hidden_field :user_id %>
   </div>
 
   <div class="actions">
