--- a/app/views/events/_tickets_list.html.erb
+++ b/app/views/events/_tickets_list.html.erb
@@ -12,6 +12,7 @@
       <th>Email address</th>
       <th>Phone</th>
       <th>Event ID</th>
+      <th>User ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,6 +27,7 @@
         <td><%= ticket.email_address %></td>
         <td><%= ticket.phone %></td>
         <td><%= ticket.event_id %></td>
+        <td><%= ticket.user_id %></td>
         <td><%= link_to 'Show', ticket %></td>
         <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
         <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
