--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 <h1> All events</h1> 
+<h1>Example heading <span class="badge badge-secondary">New</span></h1>
 <ul>
 	<% for event in @events %>
 		<li><%= link_to event.artist, "/events/#{event.id}" %></li>
