--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,7 +29,7 @@
 
 <p>
   <strong> Buy New ticket!!! </strong>
-  <%= render 'new_ticket', ticket: Ticket.new(:event_id=>@event.id)  %>
+  <%= render 'new_ticket', ticket: Ticket.new(:event_id=>@event.id, :user_id=>current_user.id)  %>
 </p>
 
 <p>
